--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE HTML>
 <html>
 <head> 
-    <title>Getting Started: Serving Web Content</title> 
+    <title>Azure Language</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="css/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap/dist/css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="css/bootstrap/dist/css/bootstrap-theme.min.css" />
 </head>
 <body>
-    <p>Get your greeting <a href="/greeting">here</a></p>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-bg">
+        <div class="container-fluid">
+            <div class="content">
+                <div class="navbar-header">
+                    <a href="/index"><img src="images/logo.png" height="35" id="navbar-img" alt="logo" title="logo" class="logo-container logo-sgv" /></a>
+                </div>
+            </div>
+        </div>
+    </nav>
+   
+    <div class="content row">
+        <div class="col-md-4" style="padding-top:20px; font-size:large">
+            <a href="/sentiment">Try Azure Language Sentiment Analysis</a>
+        </div>
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+            <h5>LEARN MORE</h5>
+            <div style="font-size:16px;">
+                <a href="https://language.cognitive.azure.com/">Azure Language Studio</a>
+            </div>
+            <div style="font-size:16px;">
+                <a href="https://docs.microsoft.com/en-us/azure/search/search-what-is-azure-search">Azure Cognitive Search</a>
+            </div>
+            <div style="font-size:16px;">
+                <a href="https://docs.microsoft.com/en-us/azure/cognitive-services/Welcome">Cognitive Services</a>
+            </div>
+            <div style="font-size:16px;">
+                <a href="https://docs.microsoft.com/en-us/azure/devops/pipelines/targets/azure-machine-learning?view=azure-devops&tabs=yaml">Azure Machine Learning</a>
+            </div>
+            <div style="font-size:16px;">
+                <a href="https://azure.microsoft.com/en-us/resources/knowledge-mining-the-next-wave-of-artificial-intelligence-led-transformation/">Knowledge Mining</a>
+            </div>
+        </div>
+    </div>
+    <div>
+        <footer class="main-footer navbar-bg">
+            <div class="content">
+                <span class="copyright navbar-text-color">&copy; 2022 - Microsoft</span>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
